--- a/ms-flash-cards/src/index.css
+++ b/ms-flash-cards/src/index.css
@@ -1,36 +1,248 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 :root {
-  --font_size: 4vw;
-  --height: calc(10px +2vw);
-  --flash_font_size: 17vw;
-  --flash_height: 30vw;
+  --font_size: 2rem;
+  --height: 3rem;
+  --flash_font_size: 2em;
+  --flash_height: 1em;
+  --primary-color: hsla(209, 70%, 13%, 1);
+  --background-color: hsla(15, 31%, 72%, 1);
+  --color-creamson: #fff0de;
+  --lapis-lazuli: rgba(38, 96, 164, 1);
+  --azure-web: rgba(237, 247, 246, 1);
+  --sandy-brown: rgba(241, 153, 83, 1);
+  --copper: rgba(196, 115, 53, 1);
+  --caf-noir: rgba(86, 53, 30, 1);
+  --crimson: hsla(352, 70%, 50%, 1);
+  --pale-dogwood: hsla(15, 31%, 72%, 1);
+  --dodger-blue: hsla(203, 99%, 48%, 1);
+  --oxford-blue: hsla(209, 70%, 13%, 1);
+  --sky-blue: hsla(191, 61%, 63%, 1);
+  --red_button: hsla(0, 93%, 50%, 1);
+  --red_button_hover: hsla(0, 100%, 35%, 1);
+  --green_button: hsla(120, 67%, 49%, 1);
+  --green_button_hover: hsla(120, 77%, 29%, 1);
+  --button_color: var(--azure-web);
+  --panel_color: var(--dodger-blue);
 }
 
-.flashcards div {
-  border: 0.6dvh solid grey;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 1280px;
+  margin: 0 auto;
+  background-color: var(--background-color);
+  font-size: var(--font_size);
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__nav {
+  display: flex;
+  overflow: hidden;
+  background: var(--primary-color);
+}
+
+.header__logo {
+  flex: 1;
+  display: flex;
+  position: relative;
+  padding: 20px;
+}
+
+.header__logo-overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  background-color: var(--primary-color);
+  z-index: -1;
+}
+
+.header__logo h4 {
+  padding-left: 30px;
+  font-weight: 700;
+  font-size: 1.4em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.header__menu,
+.header__menu-mobile {
+  padding: 20px;
+
+  flex: 1.236;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 64px;
+
+  list-style: none;
+  color: #fff;
+}
+
+.header__menu li {
+  font-weight: 700;
+  line-height: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.header__menu li:hover,
+.header__menu li:focus {
+  color: var(--azure-web);
+}
+
+.mathuserinput {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.mathuserinput__questions {
+  display: flex;
+  overflow: hidden;
+  flex-wrap: wrap;
+  font-size: 0.7em;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.mathuserinput__questions .button {
+  min-width: 180px;
+  border: 1px solid var(--primary-color);
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--lapis-lazuli);
+  color: #fff;
+}
+
+.mathuserinput__questions .button p {
+  font-weight: 700;
+}
+
+.mathuserinput__questions .button select {
+  width: 100%;
+  font-size: calc(0.75em);
+  font-weight: 600;
+  text-align: right;
+  padding: 10px 10px;
+  background-color: var(--lapis-lazuli);
+  color: var(--color-creamson);
+  border-style: none;
+}
+
+.mathuserinput__questions .button select:checked {
+  background-color: #e0dede;
+}
+
+.mathuserinput-start button {
+  font-size: inherit;
+  line-height: 2em;
+  font-weight: bold;
+  width: 100%;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+  display: flex;
+}
+
+.mathsflash {
+  margin: 20px auto;
+  display: flex;
+  overflow: hidden;
+  min-height: 80vh;
+  gap: 10px;
+}
+
+.mathsflash__infopanel {
+  flex: 1;
+  flex-direction: column;
+  min-height: 50vh;
+}
+
+.mathsflash__infopanel .info {
+  display: flex;
+  flex-direction: column;
+  background: var(--panel_color);
+  border-radius: 10px;
+  padding: 1rem;
+  height: 32vh;
+  align-content: space-evenly;
+}
+
+.mathsflash__infopanel button {
+  margin: 5px;
+  font-size: inherit;
+  display: flex;
+  flex: 1;
+  line-height: 2em;
+  font-weight: bold;
+  width: 100%;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+.mathsflash__infopanel button {
+  margin: 5px;
+  font-size: inherit;
+  line-height: 2em;
+  font-weight: bold;
+  width: 100%;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+.mathsflash__card .flashcards {
+  flex: 1;
+  border: 0.5rem solid grey;
+  font-size: 18vw;
+  /* border: 0.5rem solid grey;
   border-radius: 1dvh;
   font-weight: bold;
-  font-size: var(--flash_font_size);
+  
   height: var(--flash_height);
   background-color: #e0dede;
   justify-content: center;
   cursor: pointer;
-  transition: all 0.4s ease-in;
-  display: flex;
+  transition: all 0.4s ease-in; */
 }
 
 .flashcards div.selected {
-  border: 0.6dvh solid rgb(42, 209, 42);
+  border: 0.6dvh solid hsl(120, 67%, 49%);
   background-color: rgba(146, 245, 137, 0.89);
   color: #fff;
 }
 
 .flashcards div.incorrect {
-  border: 1dvh solid red;
+  border: 0.6dvh solid red;
   background-color: rgba(255, 92, 92, 0.89);
   color: #fff;
 }
 
-.button {
+/* .button {
   border-radius: 1vh;
   font-size: var(--font_size);
   font-weight: bold;
@@ -40,27 +252,33 @@
   cursor: pointer;
   transition: all 0.3s ease-in;
   display: flex;
+} */
+
+button {
+  border-radius: 10px;
+  color: var(--button_color);
 }
 
-.button.red:hover {
-  border: 0.2dvw solid rgb(181, 30, 30);
-  background-color: rgb(181, 30, 30);
+button.red:hover,
+button.red:focus {
+  border: 1px solid var(--red_button_hover);
+  background-color: var(--red_button_hover);
 }
 
-.button.red {
-  border: 0.2dvw solid rgb(255, 82, 82);
-  background-color: rgb(255, 82, 82);
+button.red {
+  border: 1px solid var(--red_button_hover);
+  background-color: var(--red_button);
 }
 
-.button.green:hover {
-  border: 0.2dvw solid rgb(80, 168, 72);
-  background-color: rgb(80, 168, 72);
+button.green {
+  border: 1px solid var(--green_button_hover);
+  background-color: var(--green_button);
 }
 
-.button.green {
-  border: 0.2dvw solid #04aa6d;
-  background-color: #04aa6d;
-  color: #fff;
+.button.green:hover,
+.button.green:focus {
+  border: 1px solid var(--green_button_hover);
+  background-color: var(--green_button_hover);
 }
 
 /* .button.green:enabled {
@@ -87,19 +305,7 @@
   color: grey;
 }
 
-.info {
-  border-radius: 1dvh;
-  font-size: var(--font_size);
-  height: var(--height);
-  font-weight: bold;
-  justify-content: center;
-  border: 0.4dvh solid rgb(122, 178, 252);
-  background-color: #c5d4f7b3;
-  transition: all 0.3s ease-in;
-  display: flex;
-}
-
-.choice button {
+/* .choice button {
   border-radius: 1vh;
   font-size: var(--font_size);
   height: var(--height);
@@ -111,44 +317,35 @@
   cursor: pointer;
   transition: all 0.3s ease-in;
   display: flex;
-}
+} */
 
 .choice.correct {
-  border: 0.2dvw solid rgb(42, 209, 42);
-  background-color: rgba(146, 245, 137, 0.89);
+  border: 0.2dvw solid rgba(42, 209, 42, 0.795);
+  background-color: rgba(146, 245, 137, 0.671);
 }
 
 .choice.incorrect {
-  border: 0.2dvw solid red;
-  background-color: rgba(255, 92, 92, 0.89);
+  border: 0.2dvw solid rgba(255, 0, 0, 0.733);
+  background-color: rgba(255, 92, 92, 0.534);
 }
 
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   :root {
-    --font_size: 3vw;
-    --height: 5.5dvw;
-    --flash_font_size: 18vw;
-    --flash_height: 30vw;
+    --font_size: 1em;
   }
 }
 
 @media (min-width: 768px) {
   :root {
-    --font_size: 3.2dvh;
-    --height: 6dvh;
-    --flash_font_size: 30dvh;
-    --flash_height: 50dvh;
+    --font_size: 1.5em;
   }
 }
 
 @media (min-width: 992px) {
   :root {
-    --font_size: 4.2dvh;
-    --height: 8dvh;
-    --flash_font_size: 35dvh;
-    --flash_height: 54dvh;
+    --font_size: 2em;
   }
-}
+} */
 
 @keyframes jump-shaking {
   0% {
