--- a/ms-flash-cards/src/CSS/index.css
+++ b/ms-flash-cards/src/CSS/index.css
@@ -16,7 +16,7 @@
   --dodger-blue: hsla(203, 99%, 48%, 1);
   --oxford-blue: hsla(209, 70%, 13%, 1);
   --sky-blue: hsla(191, 61%, 63%, 1);
-  --red_button: hsla(0, 93%, 50%, 1);
+  --red_button: rgb(244, 75, 75);
   --red_button_hover: hsla(0, 100%, 35%, 1);
   --green_button: hsla(120, 67%, 49%, 1);
   --green_button_hover: hsla(120, 77%, 29%, 1);
@@ -138,31 +138,28 @@ button {
 }
 
 .scores .message {
-  flex: 1;
+  flex: 1 2;
 
-  text-align: center;
-  background-color: var(--sky-blue);
+  background-image: linear-gradient(
+    to bottom right,
+    hsla(60, 77%, 83%, 1),
+    hsla(60, 77%, 83%, 0.5)
+  );
+
   border-radius: 10px;
 
   margin-top: 10px;
-  font-weight: 600;
-  font-size: 20vmin;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .scores .message p {
-  flex: 1;
-
-  text-align: center;
-  background-color: var(--sky-blue);
-  border-radius: 10px;
-
-  margin: 10px 0;
   font-weight: 600;
   font-size: 15vmin;
+  color: var(--oxford-blue);
 }
 
 button.red:hover,
@@ -211,30 +208,6 @@ button.green {
   color: grey;
 }
 
-/* .choice button {
-  border-radius: 1vh;
-  font-size: var(--font_size);
-  height: var(--height);
-  width: 100%;
-  justify-content: center;
-  border: 0.2dvw solid rgb(214, 208, 23);
-  background-color: #faffb3;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s ease-in;
-  display: flex;
-} */
-
-/* .choice.correct {
-  border: 0.5rem solid rgba(42, 209, 42, 0.795);
-  background-color: rgba(146, 245, 137, 0.671);
-}
-
-.choice.incorrect {
-  border: 0.5rem solid rgba(255, 0, 0, 0.733);
-  background-color: rgba(255, 92, 92, 0.534);
-} */
-
 @media (min-width: 768px) {
   :root {
     /* --font_size: 1.5em; */
@@ -249,26 +222,29 @@ button.green {
 */
 
 @keyframes jump-shaking {
-  0% {
-    transform: translateX(0);
+  10% {
+    transform: translateY(-10px) rotate(90deg);
   }
   25% {
-    transform: translateY(-4px);
+    transform: translateY(-15px) rotate(180deg);
   }
   35% {
-    transform: translateY(-4px) rotate(8deg);
+    transform: translateY(-20px) rotate(270deg);
+  }
+  45% {
+    transform: translateY(-30px) rotate(360deg);
   }
   55% {
-    transform: translateY(-4px) rotate(-8deg);
+    transform: translateY(-20px) rotate(90deg);
   }
   65% {
-    transform: translateY(-4px) rotate(8deg);
+    transform: translateY(-10px) rotate(300deg);
   }
   75% {
-    transform: translateY(-4px) rotate(-8deg);
+    transform: translateY(-10px) rotate(360deg);
   }
   100% {
-    transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(360deg);
   }
 }
 
