--- a/ms-flash-cards/src/CSS/Sections/animations.css
+++ b/ms-flash-cards/src/CSS/Sections/animations.css
@@ -3,7 +3,7 @@
 }
 
 .shake {
-  animation: horizontal-shaking 0.35s;
+  animation: horizontal-shaking 0.53s;
 }
 
 .button:disabled {
@@ -19,26 +19,23 @@
 }
 
 @keyframes jump-shaking {
-  10% {
-    transform: translateY(-10px) rotate(30deg);
+  0% {
+    transform: translateX(0);
   }
   25% {
-    transform: translateY(-15px) rotate(45deg);
+    transform: translateY(-9px);
   }
   35% {
-    transform: translateY(-20px) rotate(60deg);
-  }
-  45% {
-    transform: translateY(-30px) rotate(180deg);
+    transform: translateY(-9px) rotate(8deg);
   }
   55% {
-    transform: translateY(-20px) translateX(10px) rotate(270deg);
+    transform: translateY(-9px) rotate(-8deg);
   }
   65% {
-    transform: translateY(-10px) translateX(-10px) rotate(360deg);
+    transform: translateY(-9px) rotate(8deg);
   }
   75% {
-    transform: translateY(-10px) translateX(-10px) rotate(360deg);
+    transform: translateY(-9px) rotate(-8deg);
   }
   100% {
     transform: translateY(0) rotate(0);
@@ -47,36 +44,30 @@
 
 @keyframes horizontal-shaking {
   0% {
-    transform: translate(0, 0) rotate(0deg);
+    transform: translateX(0);
   }
-  25% {
-    transform: translate(5px, 5px) rotate(5deg);
+  10% {
+    transform: translateX(5px);
   }
-  50% {
-    transform: translate(0, 0) rotate(0eg);
+  20% {
+    transform: translateX(-5px);
   }
-  75% {
-    transform: translate(-5px, 5px) rotate(-5deg);
-  }
-  100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-}
-
-@keyframes tilt-shaking {
-  0% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: rotate(5deg);
+  35% {
+    transform: translateX(5px);
   }
   50% {
-    transform: rotate(0eg);
+    transform: translateX(-5px);
   }
-  75% {
-    transform: rotate(-5deg);
+  65% {
+    transform: translateX(5px);
+  }
+  80% {
+    transform: translateX(-5px);
+  }
+  90% {
+    transform: translateX(5px);
   }
   100% {
-    transform: rotate(0deg);
+    transform: translateX(0);
   }
 }
